[#11270] Fixed Alignment Issue with Checkboxes in Template Questions Modal (#11325)

--- a/src/web/app/pages-instructor/instructor-session-edit-page/template-question-modal/template-question-modal.component.scss
+++ b/src/web/app/pages-instructor/instructor-session-edit-page/template-question-modal/template-question-modal.component.scss
@@ -7,5 +7,6 @@
 }
 
 .checkbox-label {
-  margin: 3px 3px 0 0;
+  margin: 1px 3px 0 0;
+  align-self: flex-start;
 }
